--- a/res/xml/config_center_about_category.xml
+++ b/res/xml/config_center_about_category.xml
@@ -81,34 +81,10 @@
         android:title="@string/maintainers_category" >
     
         <Preference
-            android:title="xK4m3l"
-            android:summary="Xiaomi Mi 5s Plus maintainer\nXiaomi Mi Mix 2s maintainer">
+            android:title="AshutoshSundresh"
+            android:summary="OnePlus 6T Maintainer">
         </Preference>
 
-        <Preference
-            android:title="criticalerror99"
-            android:summary="Xiaomi Mi 9T maintainer">
-        </Preference>
-
-        <Preference
-            android:title="FranticCoin"
-            android:summary="Xiaomi Redmi 3s maintainer">
-        </Preference>
-
-        <Preference
-            android:title="SiddharthBharadwaj"
-            android:summary="Xiaomi Mi A2 maintainer">
-        </Preference>
-
-        <Preference
-            android:title="xyron"
-            android:summary="Asus Max Pro M1 maintainer">
-        </Preference>
-
-        <Preference
-            android:title="Dzienny"
-            android:summary="OnePlus 5T maintainer">
-        </Preference>
 
     </PreferenceCategory>
 
