Fixup! Fix broken Ambient Music Ticker

--- a/res/xml/config_center_lockscreen_category.xml
+++ b/res/xml/config_center_lockscreen_category.xml
@@ -48,7 +48,7 @@
         android:key="ambient_display_tuner"
         android:title="@string/ambient_display_tuner">     
          
-    <SwitchPreference
+    <com.exui.config.center.preferences.SystemSettingSwitchPreference
         android:key="pulse_on_new_tracks"
         android:title="@string/pulse_on_new_tracks_title"
         android:summary="@string/pulse_on_new_tracks_summary"
