--- a/res/xml/config_center_about_category.xml
+++ b/res/xml/config_center_about_category.xml
@@ -87,7 +87,7 @@
          
          <Preference
             android:title="MezzLasha"
-            android:summary="Xiaomi Laurel Sprout Maintainer">
+            android:summary="Xiaomi Mi a3 Maintainer">
         </Preference>        
 
     </PreferenceCategory>
