Incall vibration options [3/3]

--- a/res/xml/config_center_notifications_category.xml
+++ b/res/xml/config_center_notifications_category.xml
@@ -72,6 +72,21 @@
         android:summary="@string/hide_smart_replies_summary"
         android:defaultValue="false"/>
 
+    <com.exui.config.center.preferences.SystemSettingSwitchPreference
+        android:key="vibrate_on_connect"
+        android:title="@string/incall_vibrate_connect_title"
+        android:defaultValue="true" />
+
+    <com.exui.config.center.preferences.SystemSettingSwitchPreference
+        android:key="vibrate_on_callwaiting"
+        android:title="@string/incall_vibrate_call_wait_title"
+        android:defaultValue="true" />
+
+    <com.exui.config.center.preferences.SystemSettingSwitchPreference
+        android:key="vibrate_on_disconnect"
+        android:title="@string/incall_vibrate_disconnect_title"
+        android:defaultValue="true" />
+
     </PreferenceCategory>         
 
 </PreferenceScreen>
