--- a/res/xml/config_center_about_category.xml
+++ b/res/xml/config_center_about_category.xml
@@ -90,6 +90,12 @@
             android:summary="Xiaomi Mi A3 Maintainer">
         </Preference>        
 
+         <Preference
+            android:title="Eduardo H"
+            android:summary="OnePlus 6 Maintainer">
+        </Preference>
+
+
     </PreferenceCategory>
 
 </PreferenceScreen>
