--- a/res/xml/config_center_about_category.xml
+++ b/res/xml/config_center_about_category.xml
@@ -97,8 +97,18 @@
 
          <Preference
             android:title="MadeOfGreat"
-            android:summary="Pocophone F1 Maintainer">
-        </Preference>        
+            android:summary="Xiaomi Pocophone F1 Maintainer">
+         </Preference>        
+
+         <Preference
+            android:title="AshayKapadiya"
+            android:summary="Xiaomi Redmi Note 4/4X Maintainer">
+         </Preference>        
+
+         <Preference
+            android:title="MiDoNaSR"
+            android:summary="Xiaomi Redmi S2 Maintainer">
+         </Preference>        
 
 
     </PreferenceCategory>
