--- a/res/xml/config_center_about.xml
+++ b/res/xml/config_center_about.xml
@@ -87,6 +87,36 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="about_misc_category"
+        android:title="@string/misc_category">
+
+    <Preference
+        android:key="the_drill"
+        android:title="@string/the_drill_title"
+        android:summary="@string/the_drill_summary"
+        android:fragment="com.exui.config.center.fragments.TheDrill"/>
+
+        <Preference
+            android:key="magisk_install"
+            android:title="Magisk"
+            android:summary="Download the latest stable Magisk installer">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="https://github.com/topjohnwu/Magisk/releases"/>
+        </Preference>
+
+        <Preference
+            android:key="donation_links"
+            android:title="Donate"
+            android:summary="If you liked the work on this ROM">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="https://paypal.me/UmadeviS"/>
+        </Preference>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="about_external"
         android:title="@string/about_external_category">
 
@@ -142,11 +172,4 @@
             android:fragment="com.android.settings.deviceinfo.aboutphone.MyDeviceInfoFragment"/>
 
     </PreferenceCategory>
-
-    <Preference
-        android:key="the_drill"
-        android:title="@string/the_drill_title"
-        android:summary="@string/the_drill_summary"
-        android:fragment="com.exui.config.center.fragments.TheDrill"/>
-
 </PreferenceScreen>
