--- a/res/xml/config_center_themer_category.xml
+++ b/res/xml/config_center_themer_category.xml
@@ -23,10 +23,26 @@
         android:key="theme_customization_category_baseless"
         android:title="@string/themes_baseful_accusations" >
 
+        <com.android.settings.display.darkmode.DarkModePreference
+            android:key="dark_ui_mode"
+            android:title="@string/dark_ui_mode"
+            android:fragment="com.android.settings.display.darkmode.DarkModeSettingsFragment"
+            android:widgetLayout="@null"
+            settings:widgetLayout="@null"
+            settings:controller="com.android.settings.display.DarkUIPreferenceController"
+            settings:searchable="false"/>
+
+        <SwitchPreference
+            android:key="hwui_force_dark"
+            android:title="@string/hwui_force_dark_title"
+            android:summary="@string/hwui_force_dark_summary"
+            android:dependency="dark_ui_mode" />
+
         <ListPreference
             android:key="android.theme.customization.primary_color"
             android:icon="@drawable/ic_base_theme"
-            android:title="@string/theme_customization_primary_title"/>
+            android:title="@string/theme_customization_primary_title"
+            android:dependency="dark_ui_mode" />
 
         <com.exui.config.center.preferences.SystemSettingListPreference
             android:key="systemui_plugin_volume"
