--- a/res/xml/config_center_themer_category.xml
+++ b/res/xml/config_center_themer_category.xml
@@ -30,12 +30,14 @@
             android:widgetLayout="@null"
             settings:widgetLayout="@null"
             settings:controller="com.android.settings.display.DarkUIPreferenceController"
+            android:icon="@drawable/dark_ui"
             settings:searchable="false"/>
 
         <SwitchPreference
             android:key="hwui_force_dark"
             android:title="@string/hwui_force_dark_title"
             android:summary="@string/hwui_force_dark_summary"
+            android:icon="@drawable/ic_moon"
             android:dependency="dark_ui_mode" />
 
         <ListPreference
