--- a/res/xml/config_center_themer_category.xml
+++ b/res/xml/config_center_themer_category.xml
@@ -54,6 +54,17 @@
             android:entryValues="@array/volume_panel_values"
             android:defaultValue="@string/volume_panel_aosp_val" />
 
+       <Preference
+        android:key="clock_style"
+        android:title="@string/clock_style_title"
+        android:summary="@string/clock_style_summary"
+        android:icon="@drawable/ic_clock_themer">
+        <intent
+            android:action="android.intent.action.VIEW"
+            android:targetPackage="com.google.android.apps.wallpaper"
+            android:targetClass="com.android.customization.picker.ClockFacePickerActivity" />
+    </Preference>
+
     </PreferenceCategory>
 
     <PreferenceCategory
