Theme engine: Add lockscreen clock picker

--- a/res/values/exui_strings.xml
+++ b/res/values/exui_strings.xml
@@ -586,6 +586,9 @@
 
     <string name="dark_ui_warning">Enable dark theme to set different themes</string>
 
+    <string name="clock_style_title">Clock Styles</string>
+    <string name="clock_style_summary">Customize your lockscreen clock</string>
+
     <!-- QS battery estimates -->
     <string name="qs_show_battery_estimate_title">Battery estimates in QS</string>
     <string name="qs_show_battery_estimate_summary">Show estimated remaining battery life next to the icon (Needs a SystemUI restart)</string>
