--- a/res/values/exui_arrays.xml
+++ b/res/values/exui_arrays.xml
@@ -509,4 +509,16 @@
         <item>2</item>
     </string-array>
 
+
+    <!-- Brightness sliders styles -->
+    <string-array name="brightness_slider_style_selector_entries" translatable="false">
+        <item>@string/brightness_slider_style_default</item>
+        <item>@string/brightness_slider_style_md2tint</item>
+    </string-array>
+
+    <string-array name="brightness_slider_style_selector_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
