--- a/res/values/exui_strings.xml
+++ b/res/values/exui_strings.xml
@@ -665,4 +665,9 @@
     <string name="screenshot_options_summary">Customize screenshot attributes like time, delay,type etc</string>
     <string name="screenshot_type_long">Take fullscreen &amp; extended screenshots</string>
 
+
+    <!-- Brightness Slider style -->
+    <string name="brightness_slider_style_default">MIUI tinted</string>
+    <string name="brightness_slider_style_md2tint">Material tinted</string>
+    <string name="brightness_slider_style_title">MIUI brightness slider theme</string>
 </resources>
