--- a/res/drawable/accent_elements_preview.xml
+++ b/res/drawable/accent_elements_preview.xml
@@ -1,53 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2020 ProjectFluid
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-          http://www.apache.org/licenses/LICENSE-2.0
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
-
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="134.38dp"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
+    android:width="134dp"
     android:height="125dp"
-    android:viewportWidth="134.38"
+    android:viewportWidth="134"
     android:viewportHeight="125">
-
-    <!-- Button -->
-    <path android:fillColor="?android:attr/colorAccent"
-        android:pathData="M0 101C0 98.7909 1.79086 97 4 97H130.38C132.589 97 134.38 98.7909 134.38 101V121C134.38 123.209 132.589 125 130.38 125H4C1.79086 125 0 123.209 0 121V101Z" />
-
-    <!-- Slider -->
-    <path android:fillColor="#000000"
+    <path
+        android:name="path"
+        android:pathData="M 0 101 C 0 98.8 1.8 97 4 97 L 130.4 97 C 132.6 97 134.4 98.8 134.4 101 L 134.4 121 C 134.4 123.2 132.6 125 130.4 125 L 4 125 C 1.8 125 0 123.2 0 121 L 0 101 Z"
+        android:fillColor="?android:attr/colorAccent"
+        android:strokeWidth="1"/>
+    <path
+        android:name="path_1"
+        android:pathData="M 0 57.5 C 0 56.7 0.7 56 1.5 56 L 128.8 56 C 129.6 56 130.3 56.7 130.3 57.5 C 130.3 58.3 129.6 59 128.8 59 L 1.5 59 C 0.7 59 0 58.3 0 57.5 Z"
+        android:fillColor="?android:attr/colorAccent"
         android:fillAlpha="0.08"
-        android:pathData="M0 57.5C0 56.6716 0.671573 56 1.5 56H128.83C129.658 56 130.33 56.6716 130.33 57.5C130.33 58.3284 129.658 59 128.83 59H1.5C0.671573 59 0 58.3284 0 57.5Z" />
-
-    <path android:fillColor="?android:attr/colorAccent"
-        android:pathData="M1.5 56C0.671573 56 0 56.6716 0 57.5C0 58.3284 0.671573 59 1.5 59H93.0341C93.2809 59.761 93.7142 60.461 94.3066 61.0355C95.2734 61.9732 96.5847 62.5 97.952 62.5C99.3193 62.5 100.631 61.9732 101.597 61.0355C102.564 60.0979 103.107 58.8261 103.107 57.5C103.107 56.1739 102.564 54.9021 101.597 53.9645C100.631 53.0268 99.3193 52.5 97.952 52.5C96.5847 52.5 95.2734 53.0268 94.3066 53.9645C93.7142 54.539 93.2809 55.239 93.0341 56H1.5Z"/>
-
-    <!-- Switch -->
-    <path android:fillColor="?android:attr/colorAccent"
+        android:strokeWidth="1"/>
+    <path
+        android:name="path_2"
+        android:pathData="M 1.5 56 C 0.7 56 0 56.7 0 57.5 C 0 58.3 0.7 59 1.5 59 L 93 59 C 93.2 59.8 93.7 60.5 94.3 61 C 95.3 61.9 96.6 62.5 97.9 62.5 C 99.3 62.5 100.6 62 101.5 61 C 102.5 60.1 103 58.8 103 57.5 C 103 56.2 102.5 54.9 101.5 54 C 100.5 53.1 99.2 52.5 97.9 52.5 C 96.5 52.5 95.2 53 94.3 54 C 93.7 54.6 93.3 55.3 93 56 L 1.5 56 Z"
+        android:fillColor="?android:attr/colorAccent"
+        android:strokeWidth="1"/>
+    <path
+        android:name="path_3"
+        android:pathData="M 119.5 0 L 97.8 0 C 94.9 0 92.2 1.1 90.1 3.2 C 88.1 5.2 86.9 8 86.9 10.9 C 86.9 13.8 88 16.5 90.1 18.6 C 92.1 20.6 94.9 21.8 97.8 21.8 L 119.5 21.8 C 122.4 21.8 125.1 20.7 127.2 18.6 C 129.2 16.6 130.4 13.8 130.4 10.9 C 130.4 8 129.3 5.3 127.2 3.2 C 125.1 1.1 122.4 0 119.5 0 Z"
+        android:fillColor="?android:attr/colorAccent"
         android:fillAlpha="0.2"
-        android:pathData="M119.5 0H97.8335C94.9603 0 92.2047 1.14138 90.1731 3.17306C88.1414 5.20473 87 7.96027 87 10.8335C87 13.7067 88.1414 16.4623 90.1731 18.4939C92.2047 20.5256 94.9603 21.667 97.8335 21.667H119.5C122.374 21.667 125.129 20.5256 127.161 18.4939C129.193 16.4623 130.334 13.7067 130.334 10.8335C130.334 7.96027 129.193 5.20473 127.161 3.17306C125.129 1.14138 122.374 0 119.5 0Z" />
-
-    <path android:fillColor="?android:attr/colorAccent"
-        android:pathData="M119.5 17.3342C117.776 17.3342 116.123 16.6494 114.904 15.4303C113.685 14.2113 113 12.558 113 10.8341C113 9.11015 113.685 7.45682 114.904 6.23782C116.123 5.01881 117.776 4.33398 119.5 4.33398C121.224 4.33398 122.877 5.01881 124.096 6.23782C125.315 7.45682 126 9.11015 126 10.8341C126 12.558 125.315 14.2113 124.096 15.4303C122.877 16.6494 121.224 17.3342 119.5 17.3342Z" />
-
-    <!-- Radio -->
-    <path android:fillColor="?android:attr/colorAccent"
-        android:pathData="M43.4645 8.46447C44.4021 7.52678 45.6739 7 47 7C48.3261 7 49.5979 7.52678 50.5355 8.46447C51.4732 9.40215 52 10.6739 52 12C52 13.3261 51.4732 14.5979 50.5355 15.5355C49.5979 16.4732 48.3261 17 47 17C45.6739 17 44.4021 16.4732 43.4645 15.5355C42.5268 14.5979 42 13.3261 42 12C42 10.6739 42.5268 9.40215 43.4645 8.46447Z" />
-
-    <path android:fillColor="?android:attr/colorAccent"
-        android:fillType="evenOdd"
-        android:pathData="M47 2C45.6868 2 44.3864 2.25866 43.1732 2.7612C41.9599 3.26375 40.8575 4.00035 39.9289 4.92893C38.0536 6.8043 37 9.34784 37 12C37 14.6522 38.0536 17.1957 39.9289 19.0711C40.8575 19.9997 41.9599 20.7362 43.1732 21.2388C44.3864 21.7413 45.6868 22 47 22C49.6522 22 52.1957 20.9464 54.0711 19.0711C55.9464 17.1957 57 14.6522 57 12C57 10.6868 56.7413 9.38642 56.2388 8.17317C55.7362 6.95991 54.9997 5.85752 54.0711 4.92893C53.1425 4.00035 52.0401 3.26375 50.8268 2.7612C49.6136 2.25866 48.3132 2 47 2ZM41.3431 17.6569C42.8434 19.1571 44.8783 20 47 20C49.1217 20 51.1566 19.1571 52.6569 17.6569C54.1571 16.1566 55 14.1217 55 12C55 9.87827 54.1571 7.84344 52.6569 6.34315C51.1566 4.84285 49.1217 4 47 4C44.8783 4 42.8434 4.84285 41.3431 6.34315C39.8429 7.84344 39 9.87827 39 12C39 14.1217 39.8429 16.1566 41.3431 17.6569Z" />
-
-    <!-- CheckBox -->
-    <path android:fillColor="?android:attr/colorAccent"
-        android:pathData="M10 17L5 12L6.41 10.58L10 14.17L17.59 6.58L19 8L10 17ZM19 3H5C3.89 3 3 3.89 3 5V19C3 19.5304 3.21071 20.0391 3.58579 20.4142C3.96086 20.7893 4.46957 21 5 21H19C19.5304 21 20.0391 20.7893 20.4142 20.4142C20.7893 20.0391 21 19.5304 21 19V5C21 3.89 20.1 3 19 3Z" />
-
+        android:strokeWidth="1"/>
+    <path
+        android:name="path_4"
+        android:pathData="M 119.5 17.3 C 117.8 17.3 116.1 16.6 114.9 15.4 C 113.7 14.2 113 12.5 113 10.8 C 113 9.1 113.7 7.4 114.9 6.2 C 116.1 5 117.8 4.3 119.5 4.3 C 121.2 4.3 122.9 5 124.1 6.2 C 125.3 7.4 126 9.1 126 10.8 C 126 12.5 125.3 14.2 124.1 15.4 C 122.9 16.6 121.2 17.3 119.5 17.3 Z M 53.9 8.2 C 54.8 7.3 56.1 6.7 57.4 6.7 C 58.7 6.7 60 7.2 60.9 8.2 C 61.8 9.1 62.4 10.4 62.4 11.7 C 62.4 13 61.9 14.3 60.9 15.2 C 60 16.1 58.7 16.7 57.4 16.7 C 56.1 16.7 54.8 16.2 53.9 15.2 C 53 14.3 52.4 13 52.4 11.7 C 52.4 10.4 53 9.2 53.9 8.2 Z M 10 17 L 5 12 L 6.4 10.6 L 10 14.2 L 17.6 6.6 L 19 8 L 10 17 Z M 19 3 L 5 3 C 3.9 3 3 3.9 3 5 L 3 19 C 3 19.5 3.2 20 3.6 20.4 C 4 20.8 4.5 21 5 21 L 19 21 C 19.5 21 20 20.8 20.4 20.4 C 20.8 20 21 19.5 21 19 L 21 5 C 21 3.9 20.1 3 19 3 Z"
+        android:fillColor="?android:attr/colorAccent"
+        android:strokeWidth="1"/>
+    <path
+        android:name="path_5"
+        android:pathData="M 57.5 3 C 55.14 3 52.875 3.938 51.207 5.607 C 49.538 7.275 48.6 9.54 48.6 11.9 C 48.6 14.26 49.538 16.525 51.207 18.193 C 52.875 19.862 55.14 20.8 57.5 20.8 C 59.86 20.8 62.125 19.862 63.793 18.193 C 65.462 16.525 66.4 14.26 66.4 11.9 C 66.4 9.54 65.462 7.275 63.793 5.607 C 62.125 3.938 59.86 3 57.5 3 Z"
+        android:strokeColor="?android:attr/colorAccent"
+        android:strokeWidth="2"
+        android:strokeMiterLimit="10"/>
 </vector>
