--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="ambient_light_screen_color">#111111</color>
     <color name="ambient_light_body_color">#323232</color>
     <color name="fod_item_background_stroke_color">#d6d6d6</color>
+    <color name="fod_pressed_state_item_background_stroke_color">#d6d6d6</color>
 
     <color name="disabled_text_color">#66000000</color>
 
