--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -31,5 +31,9 @@
     <dimen name="fod_picker_item_margin">10dp</dimen>
     <dimen name="fod_picker_item_size">100dp</dimen>
     <dimen name="fod_picker_item_padding">20dp</dimen>
+    
+    <dimen name="fod_pressed_state_picker_item_margin">10dp</dimen>
+    <dimen name="fod_pressed_state_picker_item_size">100dp</dimen>
+    <dimen name="fod_pressed_state_picker_item_padding">20dp</dimen>
 
 </resources>
