--- a/res/values/exui_strings.xml
+++ b/res/values/exui_strings.xml
@@ -291,6 +291,10 @@
     <string name="fod_icon_picker_title">FOD icon picker</string>
     <string name="fod_icon_picker_summary">Pick your favourite FOD icon</string>
 
+    <!-- FOD pressed state picker -->
+    <string name="fod_pressed_state_picker_title">FOD pressed effect picker</string>
+    <string name="fod_pressed_state_picker_summary">Pick your favourite FOD pressed effect</string>
+
     <!-- FOD icon use wallpaper color -->
     <string name="fod_wallpaper_color">Use wallpaper color for FOD icon</string>
     <string name="fod_wallpaper_color_summary">Uses adjusted primary wallpaper color for FOD icon</string>
@@ -524,17 +528,6 @@
     <string name="lockscreen_date_selection_box_str_gradient">Gradient Box</string>
     <string name="lockscreen_date_selection_box_str_border_accent">Dark Box with accented borders</string>
     <string name="lockscreen_date_selection_box_str_border_gradient">Dark Box with gradient borders</string>
-
-    <!-- FOD pressed state effect -->
-    <string name="fod_pressed_state_title">Fingerprint pressed effect</string>
-    <string name="fod_pressed_state_miui_cyan">MIUI Cyan</string>
-    <string name="fod_pressed_state_miui_white">MIUI White</string>
-    <string name="fod_pressed_state_realme_green_shadow">Realme Green (Shadow)</string>
-    <string name="fod_pressed_state_vivo_cyan">Vivo Cyan</string>
-    <string name="fod_pressed_state_vivo_cyan_shadow">Vivo Cyan (Shadow)</string>
-    <string name="fod_pressed_state_vivo_cyan_shadow_et713">Vivo Cyan (Shadow alt)</string>
-    <string name="fod_pressed_state_vivo_green">Vivo Green</string>
-    <string name="fod_pressed_state_vivo_yellow_shadow">Vivo Yellow (Shadow)</string>
 
     <!-- Fingerprint unlock keystore -->
     <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
