--- a/res/xml/config_center_fod_pressed_state_picker.xml
+++ b/res/xml/config_center_fod_pressed_state_picker.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 /**
- * Copyright (C) 2019 ExtendedUI
+ * Copyright (C) 2020 ShapeShiftOS
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +16,14 @@
  * limitations under the License.
  */
 -->
-<resources>
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    android:title="@string/fod_pressed_state_picker_title">
 
-    <color name="fod_item_background_stroke_color">#555555</color>
-    <color name="fod_pressed_state_item_background_stroke_color">#555555</color>
-    <color name="preview_container_border">#14FFFFFF</color>
+    <!-- Preview -->
+    <com.exui.config.center.preferences.FODPressedStatePicker
+            android:key="fod_pressed_state"
+            android:layout="@layout/fod_pressed_state_picker_preference"
+            android:selectable="false"/>
 
-</resources>
+</PreferenceScreen>
