--- a/res/values/exui_strings.xml
+++ b/res/values/exui_strings.xml
@@ -659,4 +659,8 @@
     <string name="screenshot_options_summary">Customize screenshot attributes like time, delay,type etc</string>
     <string name="screenshot_type_long">Take fullscreen &amp; extended screenshots</string>
 
+    <!-- Fingerprint authentication vibration -->
+    <string name="fp_error_vibrate_title">Fingerprint error vibration</string>
+    <string name="fp_error_vibrate_summary">Vibrate when fingerprint authentication fails</string>
+
 </resources>
