--- a/res/xml/config_center_lockscreen_category.xml
+++ b/res/xml/config_center_lockscreen_category.xml
@@ -84,6 +84,12 @@
         android:persistent="false" />
 
         <com.exui.config.center.preferences.SystemSettingSwitchPreference
+        android:key="fingerprint_vibing"
+        android:title="@string/fp_error_vibrate_title"
+        android:summary="@string/fp_error_vibrate_summary"
+        android:defaultValue="true" />
+
+        <com.exui.config.center.preferences.SystemSettingSwitchPreference
             android:key="fp_unlock_keystore"
             android:title="@string/fp_unlock_keystore_title"
             android:summary="@string/fp_unlock_keystore_summary"
