Disabling quick settings on secure lock screens [2/2]

--- a/res/values/exui_strings.xml
+++ b/res/values/exui_strings.xml
@@ -663,4 +663,8 @@
     <string name="fp_error_vibrate_title">Fingerprint error vibration</string>
     <string name="fp_error_vibrate_summary">Vibrate when fingerprint authentication fails</string>
 
+	    <!-- Quick Settings -->
+    <string name="lockscreen_qs_disabled_title">Disable quick settings when locked</string>
+    <string name="lockscreen_qs_disabled_summary">Disable expanding quick settings on secure lock screens</string>
+
 </resources>
