--- a/res/xml/quicksettings.xml
+++ b/res/xml/quicksettings.xml
@@ -92,6 +92,15 @@
         android:key="misc_qs_subcat"
         android:title="@string/misc_category">
 
+
+        <com.exui.config.center.preferences.SecureSettingSwitchPreference
+            android:key="status_bar_locked_on_secure_keyguard"
+            android:title="@string/lockscreen_qs_disabled_title"
+            android:summary="@string/lockscreen_qs_disabled_summary"
+            android:defaultValue="false" />
+
+
+
     <com.exui.config.center.preferences.SystemSettingSwitchPreference
         android:key="dismiss_all_button"
         android:title="@string/enable_clear_all_button"
