--- a/res/xml/config_center_navigation_category.xml
+++ b/res/xml/config_center_navigation_category.xml
@@ -81,6 +81,11 @@
             android:summary="@string/volume_rocker_music_controls_summary"
             android:title="@string/volume_rocker_music_controls_title"
             android:defaultValue="false" />
+	<com.exui.config.center.preferences.SystemSettingSwitchPreference
+        android:key="swap_volume_buttons"
+        android:title="@string/swap_volume_buttons_title"
+        android:summary="@string/swap_volume_buttons_summary"
+        android:defaultValue="false" />
 
     </PreferenceCategory>
 
